F!! add API to change a File
